Add functionality for sketching rainbow color

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,15 +8,30 @@
     <title>Document</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
     <div class="header">
+        <h1>Etch A Sketch!</h1>
+        <h2>How many Sides do you want your Grid to have?</h2>
+        <input class="setupGridInput" type="text">
         <button type="submit" class="setupGrid">Set Grid</button>
     </div>
 
-    <div class="container">
+    <div class="mainContainer">
+        <div class="btns">
+            <button type="submit" class="defaultColor">Default Color</button>
+            <button type="submit" class="gridRainbow">Rainbow Color</button>
+            <button type="submit" class="gridErase">Erase</button>
+        </div>
+
+
+        <div class="container">
+
+        </div>
 
     </div>
 
     <script src="index.js"></script>
 </body>
+
 </html>
